src/components/ui/OutputCard.css
.output #random{
    --scale: 1.2;
    --rotate: 30deg;
}

.output #random img{
    transform: scale(var(--scale)) rotate(var(--rotate));
}

.output #random &:hover:not(:disabled){
    --rotate: 390deg;
}

.output #done{
    --translate1: .1em, -0.2em;
    --scale1: 0.9;

    --translate2: -0.1em, .1em;
    --scale2: 1.2;
    --rotate2: 30deg;

    transition-property: background;
    transition-duration: var(--transition-duration-medium);
}

.output #done img:first-of-type{
    transform: translate(var(--translate1)) scale(var(--scale1));
}

.output #done img:last-of-type{
    margin-left: -2em;
    
    transform: translate(var(--translate2)) scale(var(--scale2)) rotate(var(--rotate2));
    opacity: 0.8;
}

.output #done:hover:not(:disabled){
    --translate1: .1em, -0.2em;
    --scale1: 1.05;

    --rotate2: 390deg;
}

.output #done:focus {
    --default-color: rgba(158, 240, 5, 0.2);
    --mid-flash-color: rgba(255,255,255,0);
    --current-color: var(--default-color);
    background: radial-gradient(circle, rgba(var(--backdrop-color),0.3) 0%, var(--current-color, red) 100%);

    transition-property: background;
    transition-duration: var(--transition-duration-medium);

    animation: flash .5s 2;
}
    
@keyframes flash {
    0% {--current-color: var(--default-color)}
    50% {--current-color: var(--mid-flash-color)}
    100% {--current-color: var(--default-color)}
}

.output #reset:hover img{
    transition-duration: var(--transition-duration-medium);
    transform: rotate(110deg);
}

.output #add{
    --rotate: -360deg;
}

.output #add img{
    transform: rotate(var(--rotate));
    transition-duration: var(--transition-duration-medium);
}

.output #add:hover{
    --rotate: 360deg;
}


#course-select-wrapper{
    display: flex;
    flex-wrap: no-wrap;
    justify-content: center;
    gap: .5em;
    justify-items: center;

    width: 100%;
    height: 2.5em;

    margin-top: 1em;
}

#course-select-wrapper * {
    height: 100%;
}


#checkboxes {
    display: flex;
    flex-wrap: wrap;
}

@media (max-width:900px) {

    .output{
        position: relative;
        overflow: hidden;
        min-height: fit-content;
        --backdrop-filter: none; /* Without this, the control panel below would not be fixed on some versions of iOS... */
    }

    /* On mobile this becomes a weird element, it takes up extra space to account for the timer */
    .output #control-panel {
        flex-direction: row-reverse;
        position: fixed;
        justify-content: center;

        width: 100%;
        height: 9em;
        left: 0;
        bottom: 0;
        margin: 0 !important;

        padding: 5em 1.25em 1em 1.25em;
        border-radius: var(--default-border-radius) var(--default-border-radius) 0 0 !important;
        background-color: rgba(var(--backdrop-color),0.3);

        --backdrop-filter: blur(var(--mild-border-radius));
        backdrop-filter: var(--backdrop-filter);
        -webkit-backdrop-filter: var(--backdrop-filter);

        overflow-y: auto;
        -webkit-overflow-scrolling:touch;

        z-index: 2;
        --gap: .75em;

    }

    .output #control-panel button:last-of-type{
        margin-left: 0;
    }

    .output #control-panel button {
        margin-top: 0;
        max-width: 100%;
    }

    #output:has([data-elapsed = "true"]) #control-panel{ /* Apply the animation that would otherwise be on timer */
        --default-color: rgba(var(--secondaryRGB),0.3);
        --mid-flash-color: rgba(var(--highlight-color),0.2);
        --current-color: var(--default-color);
        background-color: var(--current-color, red);
    
        transition-property: background-color;
        transition-duration: var(--transition-duration-medium);
    
        animation: flash 1s 1;
    }
    
    @keyframes flash {
        0% {--current-color: var(--default-color)}
        50% {--current-color: var(--mid-flash-color)}
        100% {--current-color: var(--default-color)}
    }

    #output-wrapper {
        display: flex;
        flex-direction: column-reverse;

        text-align: center;
        word-break: break-word;
    }

    #output-wrapper #chapter {
        line-height: 1.5em;
    }

    #output-wrapper #task-output{
        font-size: 2.5em;
        line-height: 1.25em;
        margin-top: 0;
        flex-basis: 2.5rem;
    }
    

    #course-select-wrapper{
        flex-wrap: wrap;
        height: fit-content;
    }

    #checkboxes {
        align-items: center;
        justify-content: center;
    }

    #checkbox-context {
        display: none;
    }
}

